Fixed uri-strucure in Carte and factored out Dish